[package]
name = "bella"
version = "0.1.0"
authors = ["TheNachoBIT"]
edition = "2021"

[dependencies]
bevy_ecs = "0.14.1"
crossbeam-queue = "0.3.11"
pollster = "0.3.0"
anymap = "1.0.0-beta.2"
vello = { version = "0.3.0", git = "https://github.com/linebender/vello/" }
interpoli = { git = "https://github.com/bella-project/interpoli/", branch = "timelines" }
winit = "0.30.5"
rand = "0.8.5"
